--- a/package.json
+++ b/package.json
@@ -6,13 +6,20 @@
   "scripts": {
     "start:buld": "tsc -w",
     "start:run": "nodemon build/index.js",
-    "start": "concurrently npm:start:*" 
+    "start": "concurrently npm:start:*"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^4.19.0",
+    "@typescript-eslint/parser": "^4.19.0",
     "concurrently": "^6.0.0",
+    "eslint": "^7.23.0",
+    "eslint-plugin-prettier": "^3.3.1",
     "nodemon": "^2.0.7"
+  },
+  "dependencies": {
+    "@types/node": "^14.14.37"
   }
 }
